--- a/2. POloletí/CSS/1_Lekce/index.html
+++ b/2. POloletí/CSS/1_Lekce/index.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <style>
+    h1,
+    h2,
+    h3 {
+      color: salmon;
+    }
+  </style>
+  <body>
+    <h1>Stylování CSS</h1>
+    <!-- INLINE STYL -->
+    <p style="color: aqua">Inline stylování</p>
+    <!-- INTERNAL STYL -->
+    <h1>Nadpis první úrovně</h1>
+    <h2>Nadpis druhé úrovně</h2>
+    <h3>Nadpis třetí úrovně</h3>
+    <!-- EXTERN9 STYL -->
+    <p>První odstavec</p>
+    <p>Druhý odstavec</p>
+    <p>Třetí odstavec</p>
+  </body>
 </html>
