--- a/3.2.3/index.html
+++ b/3.2.3/index.html
@@ -23,6 +23,11 @@
        <div class="example2">
             <div class="example3"></div>
        </div>
+       <hr>
+       <h2>Rámečky</h2>
+       <div class="panel">Základní ohraničení</div>
+       <div class="mix">Různé styly na každé straně</div>
+       <div class="card">Zkrácený zápis</div>
     </section>
 </body>
 </html>
