--- a/3.2.3/index.html
+++ b/3.2.3/index.html
@@ -28,6 +28,17 @@
        <div class="panel">Základní ohraničení</div>
        <div class="mix">Různé styly na každé straně</div>
        <div class="card">Zkrácený zápis</div>
+       <hr>
+    </section>
+
+       <h2>Margin a padding</h2>
+       <div class="box">1 box</div>
+       <div class="box">2 box</div>
+       <div class="box">3 box</div>
+
+    <section>
+        <h2>Box model</h2>
+        <div class="demo">Obsah</div>
     </section>
 </body>
 </html>
