--- a/3.2.3/index.html
+++ b/3.2.3/index.html
@@ -40,5 +40,11 @@
         <h2>Box model</h2>
         <div class="demo">Obsah</div>
     </section>
+    <section class="demo-wrap">
+  <h4>Box-sizing – content-box vs border-box</h4>
+
+  <div class="content-box">content-box</div>
+  <div class="border-box">border-box</div>
+</section>
 </body>
 </html>
