--- a/2. POloletí/CSS/3_Lekce/index.html
+++ b/2. POloletí/CSS/3_Lekce/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./styles.css">
+   <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <h3>1) Pevný box v px</h3>
-        <div class="example-1">400 x 400 px</div>
+    <h2>3.2.2 - Vlastnosti a selektory</h2>
+    <p>Zde je nějaký odstavec.</p>
+    <p>Toto je druhý odstavec.</p>
 
-    </section>
-    <hr>
-    <section>
-        <h3>2) box s výškou a šířkou 50 %</h3>
-        <div class="parent">
-            <div class="child">50% = 100px</div>
-        </div>
-    </section>
+    <div>
+        <h2>Div kontejner, do kterého patří obsah</h2>
+        <p>Zde bude obyčejný text</p>
+    </div>
+
+   
+         <p class="info" >Toto je info text.</p>
+   
+        <p class="warning">Toto je varování!</p>
+   
+   
+    
 </body>
 </html>
